[gd_scene load_steps=3 format=3 uid="uid://cyp2xgq62bqii"]

[ext_resource type="Theme" uid="uid://dwof7m2ye3tjh" path="res://ui/default_theme.tres" id="1_402t2"]
[ext_resource type="Script" uid="uid://bjmwl2ovcr3pu" path="res://ui/menus/input_sub_menu.gd" id="2_4xomy"]

[node name="Input" type="VBoxContainer"]
offset_right = 162.0
offset_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_402t2")
script = ExtResource("2_4xomy")

[node name="Sensitivity" type="Control" parent="."]
custom_minimum_size = Vector2(0, 68)
layout_mode = 2
theme = ExtResource("1_402t2")

[node name="Label" type="Label" parent="Sensitivity"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = -4.0
offset_bottom = 26.0
grow_horizontal = 2
theme = ExtResource("1_402t2")
text = "Mouse Sensitivity"
horizontal_alignment = 1
uppercase = true

[node name="SensitivitySlider" type="HSlider" parent="Sensitivity"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.0
offset_right = -4.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Self-explanatory."
theme = ExtResource("1_402t2")
min_value = 1.0
max_value = 15.0
step = 0.1
value = 9.0

[node name="SensitivityLabel" type="Label" parent="Sensitivity"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -26.0
offset_right = -4.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_402t2")
text = "09.0"
horizontal_alignment = 1
uppercase = true

[connection signal="value_changed" from="Sensitivity/SensitivitySlider" to="." method="_on_sensitivity_slider_value_changed"]
